force-app/main/default/objects/Witness_Audit__c/Witness_Audit__c.object-meta.xml
<CustomObject>
    <label>Witness Audit</label>
    <nameField>
        <displayFormat>WA-{0000000}</displayFormat>
        <label>Witness Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Witness Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>