force-app/main/default/objects/Witness_Audit__c/fields/AuditNotes__c.field-meta.xml
<CustomField>
    <fullName>AuditNotes__c</fullName>
    <label>Audit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>