force-app/main/default/objects/Witness_Audit__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Witness Audits</relationshipLabel>
    <relationshipName>Witness_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>