force-app/main/default/objects/Witness_Audit__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Engagement_Type</valueSetName>
    </valueSet>
</CustomField>