force-app/main/default/objects/Witness_Audit__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Witness Audits</relationshipLabel>
    <relationshipName>Witness_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>