force-app/main/default/objects/Witness_Audit__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Witness Audits</relationshipLabel>
    <relationshipName>Witness_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>