force-app/main/default/objects/Witness_Audit__c/fields/WitnessByContact__c.field-meta.xml
<CustomField>
    <fullName>WitnessByContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Witness By Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Auditor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Witness Audits (Witness By Contact)</relationshipLabel>
    <relationshipName>Audit_Witnessed</relationshipName>
    <type>Lookup</type>
</CustomField>