force-app/main/default/objects/Witness_Audit__c/fields/WitnessByUser__c.field-meta.xml
<CustomField>
    <fullName>WitnessByUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Witness By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Witness_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>