force-app/main/default/objects/Witness_Audit__c/fields/WitnessDate__c.field-meta.xml
<CustomField>
    <fullName>WitnessDate__c</fullName>
    <label>Witness Date</label>
    <type>Date</type>
</CustomField>