force-app/main/default/objects/Witness_Audit__c/fields/WitnessPlannedDate__c.field-meta.xml
<CustomField>
    <fullName>WitnessPlannedDate__c</fullName>
    <label>Witness Planned Date</label>
    <type>Date</type>
</CustomField>