force-app/main/default/objects/Witness_Audit__c/fields/WitnessStatus__c.field-meta.xml
<CustomField>
    <fullName>WitnessStatus__c</fullName>
    <label>Witness Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Re-Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>